--- a/src/Subtotal.css
+++ b/src/Subtotal.css
@@ -7,5 +7,25 @@
     background-color: #f3f3f3;
     border: #dddddd;
     border-radius: 3px;
-    /* justify-content: ; */
+    justify-content: space-between;
+}
+
+.subtotal__gift {
+    display: flex;
+    align-items: center;
+}
+
+.subtotal__gift  input {
+    margin-right: 5px;
+}
+
+.subtotal button {
+    background: #f0c14b;
+    border-radius: 2px;
+    width: 100%;
+    height: 30px;
+    border: 1px;
+    margin-top: 10px;
+    border-color: #a88743 #9c7e31 #846a29;
+    color: #111;
 }
