--- a/src/Header.css
+++ b/src/Header.css
@@ -1,14 +1,14 @@
 .header {
     background-color: #131921;
     display: flex;
-    align-items: center;
+    align-items: center;    
     position: sticky;
     top: 0;
     z-index: 100;
 }
 
 .header__nav {    
-    display: flex;
+    display: flex;    
     justify-content: space-evenly;
 }
 
@@ -21,20 +21,23 @@
 }
 
 .header__searchInput {
-    height: 12px;
-    padding: 10px;
+    height: 20px;
+    width:1000px;
+    padding: 10px; 
+    border-radius: 10px 0px 0px 10px;   
     border: none;
 }
 
 .header__search {
-    display: flex; 
+    display: flex;     
     /* flex: 1;    */
 }
 
 .header__searchIcon {
     padding: 5px;
-    height: 22px !important;
+    height: 30px !important;
     background-color: #cd9042;
+    border-radius: 0px 15px 15px 0px;
 }
 
 .header__link {
